TCVP-1617 fixed sorting and alignment

--- a/src/frontend/staff-portal/src/app/components/jj-workbench/jj-dispute-wr-assignments/jj-dispute-wr-assignments.component.scss
+++ b/src/frontend/staff-portal/src/app/components/jj-workbench/jj-dispute-wr-assignments/jj-dispute-wr-assignments.component.scss
@@ -1,6 +1,6 @@
 td, th {
-    vertical-align: middle !important;
-    padding-left: 10px !important;
+  vertical-align: middle !important;
+  padding-left: 10px !important;
 }
 
 h3, h2 {
@@ -45,27 +45,19 @@ th {
 }
 
 .inputContainer {
-    display: flex;
-    align-items: center;
-    position: relative;
-  }
+  display: flex;
+  align-items: center;
+  position: relative;
+}
 
-  .input[name="searchInput"] {
-    width: 100%;
-    padding-right: 40px;
-  }
+.input[name="searchInput"] {
+  width: 100%;
+  padding-right: 40px;
+}
 
-  .inputIcon {
-    position: absolute;
-    right: 10px;
-  }
-
-  .centerColumn {
-    text-align: center !important;
-  }
-
-  .centerColumn.mat-sort-header-container {
-    justify-content: center !important;
+.inputIcon {
+  position: absolute;
+  right: 10px;
 }
 
 ::ng-deep .mat-sort-header-arrow {
